--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>kei-orcainc/Typing Gmae</title>
 </head>
 <body>
-    <h1>Hello World!</h1>
+    <h1>masterじゃなくてmainになったんやね。</h1>
+    <h3>バグかと思ったよ。。。。</h3>
 </body>
 </html>
