--- a/index.html
+++ b/index.html
@@ -3,9 +3,52 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>kei-orcainc/Typing Gmae</title>
+
+    <link href="./css/destyle.css" rel="stylesheet">
+    <link href="./css/style.css" rel="stylesheet">
+
+    <title>Kei/Typing Gmae</title>
 </head>
 <body>
-    
+    <header>
+        <div class="wrap">
+            <div class="btn_box">
+                <p class="retry_btn">リトライ</p>
+                <p class="pause_btn">ポーズ</p>
+            </div>
+            <p class="game_title">タイピングゲーム</p>
+        </div>
+    </header>
+    <main>
+        <div class="status_box">
+            <div class="type_count_box">
+                <p class="correct_type_count">正タイプ数：<span></span></p>
+                <p class="wrong_type_count">誤タイプ数：<span></span></p>
+            </div>
+            <p class="timer">05:00</p>
+        </div>
+        <div class="ploblem_word_box">
+            <p class="plobrem_word">Hello World!</p>
+        </div>
+
+        <div class="key_board">
+            <p>1</p><p>2</p><p>3</p><p>4</p><p>5</p><p>6</p><p>7</p><p>8</p><p>9</p><p>0</p>
+        </div>
+        <div class="key_board">
+            <p>Q</p><p>W</p><p>E</p><p>R</p><p>T</p><p>Y</p><p>U</p><p>I</p><p>O</p><p>P</p>
+        </div>
+        <div class="key_board">
+            <p>A</p><p>S</p><p>D</p><p>F</p><p>G</p><p>H</p><p>J</p><p>K</p><p>L</p>
+        </div>
+        <div class="key_board">    
+            <p>Z</p><p>X</p><p>C</p><p>V</p><p>B</p><p>N</p><p>M</p>
+        </div>
+        <div class="key_board">
+            <p>Spase</p>
+        </div>
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
