--- a/index.html
+++ b/index.html
@@ -27,25 +27,29 @@
             </div>
             <p class="timer">05:00</p>
         </div>
+        
         <div class="ploblem_word_box">
             <p class="plobrem_word">Hello World!</p>
         </div>
 
-        <div class="key_board">
-            <p>1</p><p>2</p><p>3</p><p>4</p><p>5</p><p>6</p><p>7</p><p>8</p><p>9</p><p>0</p>
+        <div class="key_board_box">
+            <div class="key_board">
+                <p>1</p><p>2</p><p>3</p><p>4</p><p>5</p><p>6</p><p>7</p><p>8</p><p>9</p><p>0</p>
+            </div>
+            <div class="key_board">
+                <p>Q</p><p>W</p><p>E</p><p>R</p><p>T</p><p>Y</p><p>U</p><p>I</p><p>O</p><p>P</p>
+            </div>
+            <div class="key_board">
+                <p>A</p><p>S</p><p>D</p><p>F</p><p>G</p><p>H</p><p>J</p><p>K</p><p>L</p>
+            </div>
+            <div class="key_board">    
+                <p>Z</p><p>X</p><p>C</p><p>V</p><p>B</p><p>N</p><p>M</p>
+            </div>
+            <div class="key_board">
+                <p>Spase</p>
+            </div>
         </div>
-        <div class="key_board">
-            <p>Q</p><p>W</p><p>E</p><p>R</p><p>T</p><p>Y</p><p>U</p><p>I</p><p>O</p><p>P</p>
-        </div>
-        <div class="key_board">
-            <p>A</p><p>S</p><p>D</p><p>F</p><p>G</p><p>H</p><p>J</p><p>K</p><p>L</p>
-        </div>
-        <div class="key_board">    
-            <p>Z</p><p>X</p><p>C</p><p>V</p><p>B</p><p>N</p><p>M</p>
-        </div>
-        <div class="key_board">
-            <p>Spase</p>
-        </div>
+
     </main>
     <footer>
 
