--- a/index.html
+++ b/index.html
@@ -22,14 +22,15 @@
     <main>
         <div class="status_box">
             <div class="type_count_box">
-                <p class="correct_type_count">正タイプ数：<span></span></p>
-                <p class="wrong_type_count">誤タイプ数：<span></span></p>
+                <p class="correct_type_count">正タイプ数：<span>00</span></p>
+                <p class="wrong_type_count">誤タイプ数：<span>00</span></p>
             </div>
             <p class="timer">05:00</p>
         </div>
-        
+
         <div class="ploblem_word_box">
-            <p class="plobrem_word">Hello World!</p>
+            <p class="jp_wods">Hello World!</p>
+            <p class="en_word">Hello World!</p>
         </div>
 
         <div class="key_board_box">
@@ -46,13 +47,11 @@
                 <p>Z</p><p>X</p><p>C</p><p>V</p><p>B</p><p>N</p><p>M</p>
             </div>
             <div class="key_board">
-                <p>Spase</p>
+                <p class="space_key">Spase</p>
             </div>
         </div>
 
     </main>
-    <footer>
-
-    </footer>
+    <footer>&copy; 2020 kei-orcainc</footer>
 </body>
 </html>
