--- a/index.html
+++ b/index.html
@@ -25,26 +25,26 @@
                 <p class="correct_type_count">正タイプ数：<span>00</span></p>
                 <p class="wrong_type_count">誤タイプ数：<span>00</span></p>
             </div>
-            <p class="timer">05:00</p>
+            <p class="timer">03:00:00</p>
         </div>
 
         <div class="ploblem_word_box">
-            <p class="jp_wods">Hello World!</p>
-            <p class="en_word">Hello World!</p>
+            <p class="jp_word"></p>
+            <p class="en_word"></p>
         </div>
 
         <div class="key_board_box">
             <div class="key_board">
-                <p>1</p><p>2</p><p>3</p><p>4</p><p>5</p><p>6</p><p>7</p><p>8</p><p>9</p><p>0</p>
+                <p>1</p><p>2</p><p>3</p><p>4</p><p>5</p><p>6</p><p>7</p><p>8</p><p>9</p><p>0</p><p>-</p>
             </div>
             <div class="key_board">
-                <p>Q</p><p>W</p><p>E</p><p>R</p><p>T</p><p>Y</p><p>U</p><p>I</p><p>O</p><p>P</p>
+                <p>Q</p><p>W</p><p>E</p><p>R</p><p>T</p><p>Y</p><p>U</p><p>I</p><p>O</p><p>P</p><p>@</p>
             </div>
             <div class="key_board">
-                <p>A</p><p>S</p><p>D</p><p>F</p><p>G</p><p>H</p><p>J</p><p>K</p><p>L</p>
+                <p>A</p><p>S</p><p>D</p><p>F</p><p>G</p><p>H</p><p>J</p><p>K</p><p>L</p><p>;</p>
             </div>
             <div class="key_board">    
-                <p>Z</p><p>X</p><p>C</p><p>V</p><p>B</p><p>N</p><p>M</p>
+                <p>Z</p><p>X</p><p>C</p><p>V</p><p>B</p><p>N</p><p>M</p><p>,</p><p>.</p>
             </div>
             <div class="key_board">
                 <p class="space_key">Spase</p>
