--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
         <div class="ploblem_word_box">
             <p class="jp_word"></p>
-            <p class="en_word"></p>
+            <p class="en_word"><span class="typed"></span><span class="until_type"></span></p>
         </div>
 
         <div class="key_board_box">
